* New update mechanism: update in the background, and ask the user for a restart after it's done.  * Add ability to view changelog within the application.

--- a/SvclogViewer/changes.txt
+++ b/SvclogViewer/changes.txt
@@ -1,3 +1,7 @@
+2013-11-10:
+- FIX: Update mechanism. Automatically downloads the update now and applies it on the next start. Still provides the user with a choice to restart now or later.
+- NEW: Ability to view changelog within the application.
+
 2013-11-07
 - FIX: File association in Explorer wasn't always fixed
 
